--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="contentBx">
                   <h3>
                     Septembre 2022 - Aujourd'hui<br /><span
-                      >L1 - L2 Science du Numérique</span
+                      >L3 Science du Numérique</span
                     >
                   </h3>
                 </div>
