--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="#exp">Mes Expériences Profesionnelles</a></li>
             <li><a href="#projet">Mes Projets</a></li>
             <li><a href="#centre_in">Mes Centre d'interets</a></li>
+            <li><a href="" download= "">Télécharger mon CV en .pdf</a></li>
           </ul>
         </nav>
       </div>
