--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <li><a href="#exp">Mes Expériences Profesionnelles</a></li>
             <li><a href="#projet">Mes Projets</a></li>
             <li><a href="#centre_in">Mes Centre d'interets</a></li>
-            <li><a href="" download= "">Télécharger mon CV en .pdf</a></li>
           </ul>
         </nav>
       </div>
@@ -61,6 +60,11 @@
           <div class="designation">
             Etudiant en Science du Numérique, Licence 3
           </div>
+          <div>
+    <a href="./document.pdf" download class="download-button">
+        Télécharger le fichier
+    </a>
+</div>
           <p>Numéro: +33 7 68 15 31 71</p>
           <p>Email : okindaceo@gmail.com</p>
         </div>
